# task-management-api

./: .env.example  .gitignore  Dockerfile  README.md  back ssess.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/routers/: tasks.py
tests/: test_tasks.py
